alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ body {
 
 #root {
   position: relative;
-  height: 100%;
+  height: auto;
   width: 100%;
   display: flex;
   z-index: -1;
