--- a/src/stylesheets/dashboard.css
+++ b/src/stylesheets/dashboard.css
@@ -18,7 +18,9 @@
     /* width: 100vw; */
     width: 100%;
     display: flex;
+    height: 100%;
     flex-direction: row;
+    overflow-x: hidden;
 }
 
 .dashboard-container {
@@ -31,6 +33,7 @@
     /* width: 85%; */
     align-items: center;
     width: 75%;
+    height: 100%;
     /* margin-left: var(--sidenav-width); */
     /* color: #ffffff; */
     /* background-color: rgb(245, 246, 249); */
