--- a/src/stylesheets/sidenav.css
+++ b/src/stylesheets/sidenav.css
@@ -1,13 +1,13 @@
 .sidenav-frame {
     width: 25%;
     max-width: 300px;
-    height: 100%;
     /* border-right: grey solid 1px; */
     z-index: 2;
     /* position: absolute; */
     display: flex;
     align-items: center;
     /* margin-top: 100px; */
+    overflow-y: auto;
 }
 
 .sidenav-container {
@@ -647,6 +647,10 @@
     line-height: 50px;
     white-space: normal;
     font-size: 16px;
+}
+
+::-webkit-scrollbar {
+    scrollbar-width: thin;
 }
 
 .divusername {
